change room model

--- a/app/src/main/res/layout/act_camera.xml
+++ b/app/src/main/res/layout/act_camera.xml
@@ -6,26 +6,37 @@
     <androidx.camera.view.PreviewView
         android:id="@+id/camera_preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center"/>
 
     <ImageView
         android:id="@+id/last_take_photo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
+        android:layout_gravity="center"
+        android:scaleType="fitCenter"
         android:alpha="0.5" />
+    <SeekBar
+        android:id="@+id/photo_alpha_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin56"
+        android:layout_marginHorizontal="32dp"
+        android:max="100"
+        android:progress="60" />
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/take_layout"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin56"
         android:layout_gravity="bottom">
 
-        <ImageView
+        <Button
             android:id="@+id/take_photo_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
-            android:layout_gravity="center"/>
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="center"
+            android:background="@drawable/camera_btn"/>
     </FrameLayout>
 
 </FrameLayout>
