--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="margin3">3dp</dimen>
+    <dimen name="margin8">8dp</dimen>
+    <dimen name="margin32">32dp</dimen>
+    <dimen name="margin48">48dp</dimen>
+    <dimen name="margin56">56dp</dimen>
     <dimen name="take_layout">120dp</dimen>
+
+    <dimen name="k2w">2560dp</dimen>
+    <dimen name="k2h">1440dp</dimen>
 </resources>
