--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
     <color name="status_bar">#FF000000</color>
     <color name="launch_bg">#FF000000</color>
+
+    <color name="input_bg">#FFF3F3F3</color>
+
+    <!--  文字  -->
+    <color name="font_white">#FFFFFFFF</color>
+    <color name="font_black">#FF000000</color>
+    <color name="font_gray">#FF323232</color>
+    <color name="font_hint">#FF676767</color>
+    <color name="font_alert">#FF969696</color>
 </resources>
