--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,4 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
@@ -16,7 +14,7 @@
         <item name="android:statusBarColor">@color/status_bar</item>
         <!-- Customize your theme here. -->
         <item name="controlBackground">@color/white</item>
-        <item name="android:colorBackground">@color/status_bar</item>
+        <item name="android:colorBackground">@color/white</item>
     </style>
 
     <style name="Launcher" parent="AppTheme">
