--- a/app/src/main/res/layout/ada_anim_item.xml
+++ b/app/src/main/res/layout/ada_anim_item.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="@dimen/cover_h"
-        android:background="@color/nig_white_2" />
+        android:background="@color/nig_white_e" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
             android:id="@+id/anim_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:textColor="@color/nig_black"
             android:textSize="@dimen/font16"
             android:layout_weight="1"
             android:maxLines="1"
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin3"
-        android:textColor="@color/font_gray"
+        android:textColor="@color/nig_white_6"
         android:maxLines="2"
         android:ellipsize="end"/>
 
