--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -18,4 +18,22 @@
     <color name="font_gray">#FFC2C2C2</color>
     <color name="font_hint">#FFA6A6A6</color>
     <color name="font_alert">#FF767676</color>
+
+    <!--  夜间模式颜色  -->
+    <color name="nig_white">#FF000000</color>
+    <color name="nig_white_e">#FF111111</color>
+    <color name="nig_white_d">#FF222222</color>
+    <color name="nig_white_c">#FF333333</color>
+    <color name="nig_white_b">#FF444444</color>
+    <color name="nig_white_a">#FF555555</color>
+    <color name="nig_white_9">#FF666666</color>
+    <color name="nig_white_8">#FF777777</color>
+    <color name="nig_white_7">#FF888888</color>
+    <color name="nig_white_6">#FF999999</color>
+    <color name="nig_white_5">#FFAAAAAA</color>
+    <color name="nig_white_4">#FFBBBBBB</color>
+    <color name="nig_white_3">#FFCCCCCC</color>
+    <color name="nig_white_2">#FFDDDDDD</color>
+    <color name="nig_white_1">#FFEEEEEE</color>
+    <color name="nig_black">#FFFFFFFF</color>
 </resources>
