--- a/app/src/main/res/layout/act_animate.xml
+++ b/app/src/main/res/layout/act_animate.xml
@@ -24,9 +24,8 @@
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/anim_detail_cover"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="@dimen/cover_h"
-                    android:scaleType="fitCenter"
+                    android:layout_height="@dimen/cover_h"
+                    android:scaleType="centerCrop"
                     android:background="@color/nig_white_e"/>
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/anim_detail_count"
