--- a/app/src/main/res/layout/act_gallery.xml
+++ b/app/src/main/res/layout/act_gallery.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/demo_recycler"
+        android:id="@+id/gallery_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/white"/>
 </LinearLayout>
