--- a/app/src/main/res/layout/ada_anim_item.xml
+++ b/app/src/main/res/layout/ada_anim_item.xml
@@ -11,8 +11,8 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/anim_item_cover"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="@dimen/cover_h"
+        android:layout_height="@dimen/cover_h"
+        android:scaleType="centerCrop"
         android:background="@color/nig_white_e" />
     <LinearLayout
         android:layout_width="match_parent"
